--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</h2>
 	</div>
 	<div class="winsAndLosses">
-		<h2>Wins:
+		<h2>.   Wins:
 			<span id= "numberWins"></span>
 			</br>
 			Losses: 
